2005-12-27  Bob Halley  <halley@dnspython.org>

	* dns/e164.py: Added routines to convert between E.164 numbers and
	  their ENUM domain name equivalents.

	* dns/reversename.py: Added routines to convert between IPv4 and
	  IPv6 addresses and their DNS reverse-map equivalents.

2005-12-18  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/ANY/LOC.py (_tuple_to_float): The sign was lost when
	  converting a tuple into a float, which broke conversions of
	  south latitudes and west longitudes.

2005-11-17  Bob Halley  <halley@dnspython.org>

	* dns/zone.py: The 'origin' parameter to from_text() and from_file()
	  is now optional.  If not specified, dnspython will use the
	  first $ORIGIN in the text as the zone's origin.

	* dns/zone.py: Sanity checks of the zone's origin node can now
	  be disabled.

2005-11-12  Bob Halley  <halley@dnspython.org>

	* dns/name.py: Preliminary Unicode support has been added for
	  domain names.  Running dns.name.from_text() on a Unicode string
	  will now encode each label using the IDN ACE encoding.  The
	  to_unicode() method may be used to convert a dns.name.Name with
	  IDN ACE labels back into a Unicode string.  This functionality
	  requires Python 2.3 or greater.

2005-10-31  Bob Halley  <halley@dnspython.org>

	* (Version 1.3.5 released)

2005-10-12  Bob Halley  <halley@dnspython.org>

	* dns/zone.py: Zone.iterate_rdatasets() and Zone.iterate_rdatas()
	  did not have a default rdtype of dns.rdatatype.ANY as their
	  docstrings said they did.  They do now.

2005-10-06  Bob Halley  <halley@dnspython.org>

	* dns/name.py: Added the parent() method, which returns the
	  parent of a name.

2005-10-01  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py: Added zone_for_name() helper, which returns
	  the name of the zone which contains the specified name.

	* dns/resolver.py: Added get_default_resolver(), which returns
	  the default resolver, initializing it if necessary.

2005-09-29  Bob Halley  <halley@dnspython.org>
